src/iocc/tests/ui/fail/inject-attribute-invalid-return-type.rs
use iocc::prelude::*;

pub struct Test;

#[component]
impl Test {
    #[inject]
    pub fn new() -> Option<Self> {
        todo!()
    }
}

fn main() {}
